# blueprint

./: .gitignore  CMakeLists.txt  deno.json  readme.md
.github/workflows/: release.yml
include/: Schema.hpp
include/JSON/: Lexer.hpp  Parser.hpp  Token.hpp
include/JSON/primitives/: Array.hpp  Boolean.hpp  Null.hpp  Number.hpp  Object.hpp  String.hpp
include/interfaces/: IPrimitive.hpp
sources/: blueprint.ts  config.ts  example.ts  loader.ts  mod.ts  schema.ts  types.ts
tests/: array.ts  number.ts  object.ts  string.ts
